--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.25.9",
     "@mui/material": "^7.0.0",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
